# time-dependent-quotes

./: .env  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yml
migrations/: 20221004164538_init.sql  20221004165035_update_quote.sql
src/: main.rs  random.rs
src/controller/: form_controller.rs  mod.rs  quote_controller.rs  responses.rs  template_controller.rs  validate_controller.rs
src/database/: mod.rs  quote.rs
templates/: all-sources.html  base.html  index.html  search.html  upload.html  validate.html  view.html
