[package]
name = "time-dependent-quotes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres" ] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = {version = "0.4", features = ["serde"]}
rand = "0.8.5"
env_logger = "0.9.0"
log = "0.4.17"
actix-files = "0.5.0"
actix-multipart = "0.4.0"
sha256 = "1.0.3"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
sanitize-filename = "0.4"
uuid = { version = "1", features = ["v4"] }
